--- a/public/wialon_auth_css/login.css
+++ b/public/wialon_auth_css/login.css
@@ -1,20 +1,20 @@
 body{
-    background-image:url(/dskin/images/login/logo_bg.svg);
-    min-height: 400px;
+    /* background-image:url('/photos/logistics6.jpg'); */
     overflow-y: hidden;
+    background-repeat: none;
+    background-color: #ddd;
+
 }
 .header {
-    background-image: url(/dskin/images/login/logo_bgs.svg);
-    height: 10px;
-    margin: 10px 10px;
+    background-image: url('/photos/tracking-hub-logo-1.png');
+    height: 80px;
+    margin-top: 30px;
 }
-.inner-parent, .outer-parent {
-    display: table;
-    height: 10%;
-    width: 100%;
-}
+
+
 .content .form-container {
     background: #fff;
+    
 }
 #auth-form input {
     background-color: #fff;
@@ -25,17 +25,28 @@ body{
     height: 40px;
     margin: 0 0 12px;
     padding: 0 5px;
-    width: 100%;
 }
 #auth-form {
     margin: 0 auto;
     padding: 35px 0;
-    width: 100%;
 }
  .footer {
     display:none;
 }
- /*
+ 
 .title {
     display:none;
-} */
+}
+.wrapper {
+    box-shadow: 0 0 5px #969696;
+    margin-left: auto;
+    margin-right: auto;
+    max-width: 725px;
+    border-radius: 10px;
+    width:400px ;
+    height: 400px;
+    background-color: #fff;
+}
+.permissions-list {
+    display: none;
+}
