--- a/public/wialon_auth_css/login.css
+++ b/public/wialon_auth_css/login.css
@@ -1,8 +1,10 @@
 body{
-    /* background-image:url('/photos/logistics6.jpg'); */
+    background-image:url('/photos/logistics3.jpg');
     overflow-y: hidden;
     background-repeat: none;
     background-color: #ddd;
+    background-size: 100% 100%;
+    background-origin: border-box;
 
 }
 .header {
